java to kotlin scope(data package)
kotlin 빌드와 관련된 gradle 파일 수정
data package 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 25
@@ -36,6 +38,10 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
+    compile rootProject.ext.kotlinStdlib
+
+    kapt rootProject.ext.databindingCompiler
+
     //support lib
     compile rootProject.ext.supportLibAppCompat
     compile rootProject.ext.supportLibDesign
@@ -46,6 +52,7 @@ dependencies {
 
     compile rootProject.ext.roomRuntime
     annotationProcessor rootProject.ext.roomCompiler
+    kapt rootProject.ext.roomCompiler
 
     compile rootProject.ext.okhttp
     compile rootProject.ext.retrofit
@@ -53,12 +60,17 @@ dependencies {
 
     //dagger
     annotationProcessor rootProject.ext.daggerCompiler
+    kapt rootProject.ext.daggerCompiler
     compile rootProject.ext.dagger
     compile rootProject.ext.daggerAndroid
     compile rootProject.ext.daggerAndroidSupport
     annotationProcessor rootProject.ext.daggerAndroidProcessor
+    kapt rootProject.ext.daggerAndroidProcessor
 
     //ui
     compile rootProject.ext.picasso
 
+}
+repositories {
+    mavenCentral()
 }
